# liminis-context-graph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  build-setup.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  build-setup.yml  ci.yml  release.yml  swift.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
adrs/: 0001-edge-episode-via-entity-traversal.md  0002-cancellation-token-shutdown.md  0003-ontology-extractor-trait-parameter.md  0003-two-call-extraction.md  0004-ontology-hash-sidecar.md  0005-workspace-migration-resume-vs-schism.md  0006-cargo-dist-build-setup-env-injection.md  0007-lbug-cypher-escaping-convention.md  0008-legacy-wal-translation-module.md  0009-bound-parameter-db-access.md  001-wal-drain-and-flush-pattern.md  0047-auto-heal-index-build.md  0048-autonomous-wal-startup-recovery.md  0049-db-wal-dump-compaction.md  0049-name-first-entity-resolution.md  0050-name-first-entity-resolution.md  0051-batched-write-lock-for-long-running-passes.md  0052-orphaned-direct-rels-after-noise-deletion.md  0053-ontology-parent-edges-conditional-hash-segment.md  0054-noise-edges-reclassified-not-deleted.md
assets/: llm_pricing.json
crates/core/: Cargo.toml  build.rs
crates/service/: Cargo.toml
crates/service/src/: cli.rs  main.rs  migration.rs  sink.rs
crates/service/src/mcp/: attached.rs  backend.rs  mod.rs  scope.rs  server.rs  tools.rs
crates/service/tests/: clean_shutdown.rs  mcp_attached.rs  mcp_clean_shutdown.rs  mcp_progress.rs  mcp_stdio.rs  migration_binary.rs
crates/service/tests/common/: mod.rs
docs/: telemetry.md
docs/adr/: 0001-record-architecture-decisions.md  0002-reader-writer-split.md  0003-arcswap-db-hot-swap.md  0004-classify-entities-trait.md  0005-streaming-ipc-progress-framing.md  0006-embedder-http-contract.md  0007-relates-to-two-hop-traversal.md  0008-context-graph-multi-connection-pool.md  0009-degraded-mode-startup-recovery.md  0010-tool-use-extraction.md  0011-auto-heal-write-lock-acquisition.md  0012-edge-episode-via-entity-traversal.md  0013-cancellation-token-shutdown.md  0014-ontology-extractor-trait-parameter.md  0015-wal-drain-and-flush-pattern.md  0016-oai-embedding-contract-uds-transport.md  0017-replace-process-exit-with-normal-return.md  0018-ontology-hash-sidecar.md  0019-workspace-migration-resume-vs-schism.md  0020-ipc-collection-envelope-contract.md  0021-cargo-dist-build-setup-env-injection.md  0022-lbug-cypher-escaping-convention.md  0023-legacy-wal-translation-module.md  0024-bound-parameter-db-access.md  0025-auto-heal-index-build.md  0026-episode-cursor-wal-resume.md  0027-autonomous-wal-startup-recovery.md  0028-db-wal-dump-compaction.md  0029-name-first-entity-resolution.md  0030-batched-write-lock-for-long-running-passes.md  0031-orphaned-direct-rels-after-noise-deletion.md  0032-ontology-parent-edges-conditional-hash-segment.md  0033-noise-edges-reclassified-not-deleted.md  0034-observable-index-build-outcome.md  0035-mcp-stdio-transport.md  0036-lbug-static-link-openssl-discovery.md  0042-reader-writer-split.md  0043-arcswap-db-hot-swap.md  0043-corrections-classify-entities-trait.md  0043-streaming-ipc-progress-framing.md  (+13 more)
docs/examples/: ontology.example.yaml
docs/history/: extraction-eval-2026-04.md
docs/spikes/: native-embedder-2026-05.md
ideas/: cutover-plan.md  oss-launch-architecture.md
liminis-graph/: Cargo.toml
liminis-graph-core/: Cargo.toml
liminis-graph-core/benches/: concurrent_rw.rs  placeholder.rs  python_baseline_ns.json  search.rs  telemetry_overhead.rs  wal_replay_bench.rs
liminis-graph-core/examples/basic_ingest/: main.rs
liminis-graph-core/scripts/: record_corpus.py
liminis-graph-core/src/: app_state.rs  corrections.rs  db.rs  dedup_adapter.rs  embedder.rs  env.rs  episode.rs  error.rs  extractor.rs  handlers.rs  ipc.rs  legacy_wal.rs  lib.rs  llm_router.rs  ontology.rs  ontology_sidecar.rs  rebuild_job.rs  recovery.rs  replay.rs  schema.rs  search.rs  telemetry.rs  types.rs  wal.rs  wal_exec.rs
liminis-graph-core/src/prompts/: classify_nodes.txt  extract_edges.txt  extract_json.txt  extract_message.txt  extract_text.txt  mod.rs
liminis-graph-core/tests/: auto_heal_index_integration.rs  auto_recovery.rs  cancel_shutdown.rs  concurrent_rw_integration.rs  db_dedup.rs  dedup_integration.rs  degraded_startup.rs  embedder_transport.rs  escape_chars.rs  extraction_quality.rs  handlers_wal_admin.rs  integration_spike.rs  ipc_parity.rs  ipc_response_shapes.rs  ldb_spike_ipc.rs  ontology_integration.rs  schema_migrate.rs  telemetry_ipc.rs  tier1c_deletion.rs  wal_after_recreate.rs  wal_appender.rs  wal_compat.rs  wal_population.rs  wal_replay.rs  wal_serialization.rs
liminis-graph-core/tests/fixtures/: README.md  golden_queries.json
liminis-graph-core/tests/fixtures/ipc_corpus/: close_01.json  error_unknown_method_01.json  find_entities_01.json  find_entities_02.json  find_relationships_01.json  find_relationships_02.json  get_edges_by_group_01.json  get_edges_by_uuids_01.json  get_episodes_01.json  get_nodes_by_group_01.json  query_cypher_01.json
liminis-graph-core/tests/fixtures/wal/: falkordb_era_episodes.jsonl  python_produced.jsonl
liminis-graph/src/: main.rs  migration.rs  sink.rs
liminis-graph/tests/: clean_shutdown.rs  migration_binary.rs
native/local-inference/: .gitignore  Package.resolved  Package.swift  README.md  check-embedding-assets.sh  check-fixture-freshness.sh  convert-embedding-model.py  prepare-embedding-assets.sh  (+4 more)
spikes/native-embedder/candle-bench/: Cargo.toml
spikes/native-embedder/candle-bench/src/: embedder.rs  main.rs
spikes/native-embedder/ort-bench/: Cargo.toml
spikes/native-embedder/ort-bench/src/: embedder.rs  main.rs
(+209 files in other folders)
