[workspace]
members = ["liminis-graph-core", "liminis-graph"]
resolver = "2"

# Strip debuginfo from dev/test builds. Linking the six integration-test
# binaries against the full lbug static archive (+ third-party deps) with
# default `debug = "full"` blows the 7GB Ubuntu CI runner's RAM during
# `ld` and triggers "collect2: fatal error: ld terminated with signal 7".
# We don't need debug symbols on CI; if a dev wants them locally they can
# override with `RUSTFLAGS="-C debuginfo=2"`.
[profile.dev]
debug = "line-tables-only"

[workspace.dependencies]
arc-swap = "1"
lbug = "=0.16.1"
thiserror = "2"
tempfile = "3"
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["formatting", "macros"] }
futures = "0.3"
