[workspace]
members = ["crates/core", "crates/service"]
resolver = "2"

[workspace.package]
version = "0.1.0"
repository = "https://github.com/verveguy/liminis-context-graph"

# Strip debuginfo from dev/test builds. Linking the six integration-test
# binaries against the full lbug static archive (+ third-party deps) with
# default `debug = "full"` blows the 7GB Ubuntu CI runner's RAM during
# `ld` and triggers "collect2: fatal error: ld terminated with signal 7".
# We don't need debug symbols on CI; if a dev wants them locally they can
# override with `RUSTFLAGS="-C debuginfo=2"`.
[profile.dev]
debug = "line-tables-only"

[profile.dist]
inherits = "release"
strip = "debuginfo"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = ["github"]
installers = ["shell"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
include = ["LICENSE", "README.md", "CHANGELOG.md"]
# Lives at .github/build-setup.yml (one level up from .github/workflows/, where
# cargo-dist resolves this path). Kept OUT of .github/workflows/ so GitHub does
# not try to run the bare steps-fragment as a workflow and post an
# "Invalid workflow file" failure on every push.
github-build-setup = "../build-setup.yml"
# allow-dirty suppresses "release.yml out of date" errors from dist plan/generate.
# The cache/restore step in build-setup.yml was patched to use a YAML literal block
# scalar (|) for the multi-line path — cargo-dist's YAML emitter writes continuation
# lines at column 0, which is invalid YAML. This fix is correct; allow-dirty = ci
# preserves it across future dist generate runs.
allow-dirty = ["ci"]

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "ubuntu-24.04-arm"

[workspace.metadata.dist.dependencies.apt]
cmake = "*"
ninja-build = "*"

[workspace.dependencies]
arc-swap = "1"
lbug = "=0.17.0"
thiserror = "2"
tempfile = "3"
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
futures = "0.3"
serde_yaml = "0.9"
sha2 = "0.10"
tokio-util = "0.7"
