[package]
name = "liminis-graph-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Liminis knowledge graph over LadybugDB"
license = "MIT"

[dependencies]
lbug = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
lbug = { workspace = true }

[[bench]]
name = "placeholder"
harness = false

[[bench]]
name = "search"
harness = false

[[example]]
name = "basic_ingest"
