[package]
name = "liminis-graph-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Liminis knowledge graph over LadybugDB"
license = "MIT"

[dependencies]
arc-swap = { workspace = true }
lbug = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
time = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }
lbug = { workspace = true }
regex = { workspace = true }

[[bench]]
name = "concurrent_rw"
harness = false

[[bench]]
name = "placeholder"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "wal_replay_bench"
harness = false

[[bench]]
name = "telemetry_overhead"
harness = false

[[example]]
name = "basic_ingest"
