[package]
name = "lcg-service"
version.workspace = true
edition = "2021"
description = "LadybugDB knowledge-graph IPC service binary"
license = "MIT"
repository.workspace = true

# Binary name is a public contract (consumed by the liminis app, electron-builder
# bundling, and cargo-dist installer). Keep it `liminis-context-graph` even though
# the package is the terser `lcg-service`.
[[bin]]
name = "liminis-context-graph"
path = "src/main.rs"

[dependencies]
lcg-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
# Diagnostic-only: capture the sender PID of a received SIGTERM (see the
# signal-handler setup in main.rs). Both are already in the dependency tree
# transitively (tokio's unix signal support uses signal-hook-registry).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook-registry = "1"

[dev-dependencies]
tempfile = { workspace = true }
