[package]
name = "candle-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle-bench"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
